--- a/polynomial_time.ipynb
+++ b/polynomial_time.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb4afe19",
+   "id": "dfb99a80",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e50cf3",
+   "id": "7bddaf15",
    "metadata": {},
    "source": [
     "The following is some basic knowlegde that is needed to understand the basics of the theory of algorithms. This knowledge is the basic building blocks of what we need to know to understand the rest of this notebook;"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675f92a6",
+   "id": "76a68a33",
    "metadata": {},
    "source": [
     "### Sets"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccff977c",
+   "id": "75b58e97",
    "metadata": {},
    "source": [
     "In computing theory, a set is an **abstract data type** that includes a collection of distinct elements. Sets are used to model many different types of problems and **data structures**, including databases, hash tables, and graphs. In this notebook we will be using sets in Python."
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce7dc13a",
+   "id": "3959edff",
    "metadata": {},
    "source": [
     "Sets have unique advantages for solving problems in computer science:\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8aa736ca",
+   "id": "75db0206",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f16da16",
+   "id": "e4ac6e55",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c9215829",
+   "id": "ddf02447",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d37996f",
+   "id": "4a151fe5",
    "metadata": {},
    "source": [
     "##### Set Operations"
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "177b647f",
+   "id": "c17444b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1871cbad",
+   "id": "909fdaf3",
    "metadata": {},
    "source": [
     "*Union Example:*"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "da2aea16",
+   "id": "d0d7de19",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc635f8a",
+   "id": "ff71a394",
    "metadata": {},
    "source": [
     "*Intersection Example:*"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "34f229a9",
+   "id": "7af46a06",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3711ef",
+   "id": "3c94badd",
    "metadata": {},
    "source": [
     "*Difference Example:*"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "80655f5f",
+   "id": "62343122",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "597e38f2",
+   "id": "ffc913ec",
    "metadata": {},
    "source": [
     "*Subset Example:*"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "01827371",
+   "id": "4a9808c2",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efce4466",
+   "id": "7b46be6f",
    "metadata": {},
    "source": [
     "*Superset Example:*"
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "34dfbc4e",
+   "id": "1ca4b369",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48730b7a",
+   "id": "911169b9",
    "metadata": {},
    "source": [
     "### Tuples"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a149277",
+   "id": "62e7d9e7",
    "metadata": {},
    "source": [
     "A tuple is an **ordered, immutable sequence of elements** that contains any combination of data types. Tuples are usually used in computing to represent a *fixed set* of related data. In this notebook we will be using Tuples in python.\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d0c5cfc2",
+   "id": "53858396",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c521834",
+   "id": "718d63bc",
    "metadata": {},
    "source": [
     "##### Accessing Tuples"
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b70e4b75",
+   "id": "fe2ac929",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0496069d",
+   "id": "75ba67e0",
    "metadata": {},
    "source": [
     "##### Tuple Operations"
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b1325d81",
+   "id": "0cbfa327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba403ed",
+   "id": "2f242399",
    "metadata": {},
    "source": [
     "*Concat tuples:*"
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "393cdf34",
+   "id": "9eceea78",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b29bc3f3",
+   "id": "8ddb8efa",
    "metadata": {},
    "source": [
     "*Slicing tuples:*"
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e154c166",
+   "id": "97e8acc1",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edeaf536",
+   "id": "9fbd8531",
    "metadata": {},
    "source": [
     "*Membership testing tuples:*"
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "98f70ed9",
+   "id": "bbfd23a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6e03e85",
+   "id": "0e38bcb3",
    "metadata": {},
    "source": [
     "- *check if the element 3 is present in the tuple:*"
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "181a6b6f",
+   "id": "1f0d62ab",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f28396",
+   "id": "26996616",
    "metadata": {},
    "source": [
     "- *check if the element 6 is present in the tuple*"
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ff98048a",
+   "id": "693741a2",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af51e28c",
+   "id": "a7f6615e",
    "metadata": {},
    "source": [
     "### Strings"
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49d209e0",
+   "id": "2f83dddd",
    "metadata": {},
    "source": [
     "A String is a **sequence of characters** in computing commonly used for a variety of different types of tasks like; store data or gather user input, show user output or else communicate with external programs. In this notebook we will be using Strings in python.\n",
@@ -517,32 +517,154 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f986554f",
+   "cell_type": "markdown",
+   "id": "d2bdd4a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**String operations:**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68254422",
+   "execution_count": 32,
+   "id": "b8c0052d",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a4862e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "string1 = \"hello\"\n",
+    "string2 = \"world\""
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "69ba2063",
+   "id": "ef9da5e8",
+   "metadata": {},
+   "source": [
+    "*Concatenation:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "67ecc8bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "string3 = string1 + \" \" + string2\n",
+    "print(string3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c76e073",
+   "metadata": {},
+   "source": [
+    "*Substring:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ad6419a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hel\n"
+     ]
+    }
+   ],
+   "source": [
+    "substring = string3[0:3]\n",
+    "print(substring)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf3be5d9",
+   "metadata": {},
+   "source": [
+    "*Length:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5edeb722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = len(string3)\n",
+    "print(length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e6e6a5e",
+   "metadata": {},
+   "source": [
+    "*Case Conversion:*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "66d84c1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n"
+     ]
+    }
+   ],
+   "source": [
+    "uppercase = string3.upper()\n",
+    "print(uppercase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "51e96ecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "lowercase = string3.lower()\n",
+    "print(lowercase)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df7f65f9",
    "metadata": {},
    "source": [
     "### References"
@@ -550,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19f0041",
+   "id": "76e080dd",
    "metadata": {},
    "source": []
   }
